--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -3,7 +3,7 @@ github:
   tooling_branch_name: main
 conda_build:
   error_overlinking: true
-conda_forge_output_validation: false
+conda_forge_output_validation: true
 bot:
   automerge: true
   inspection: update-all
