Minor url tweaks, keep build at 0

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,13 +7,13 @@ package:
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/structlog_gcp-{{ version }}.tar.gz
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/structlog_gcp-{{ version }}.tar.gz
   sha256: c3013afdea46b60afce48f8f8cd7c891f57747456cfcada82113866fe67eefe9
 
 build:
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
-  number: 1
+  number: 0
 
 requirements:
   host:
