--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -3,4 +3,11 @@ github:
   tooling_branch_name: main
 conda_build:
   error_overlinking: true
-conda_forge_output_validation: true
+conda_forge_output_validation: false
+bot:
+  automerge: true
+  inspection: update-all
+  check_solvable: true
+  run_deps_from_wheel: true
+conda_install_tool: pixi
+conda_build_tool: rattler-build
